--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,6 +119,7 @@ python-dateutil = "*"
 pyyaml = "*"
 rdflib = ">=6.0.0"
 requests = ">=2.22"
+Django = "*"
 sphinx = "*"
 sphinx-click = "*"
 sphinx-rtd-theme = "*"
